fix: removed border radius on mobile for chat-navbar

--- a/src/components/chatboard/chat-navbar/ChatNavbar.css
+++ b/src/components/chatboard/chat-navbar/ChatNavbar.css
@@ -80,7 +80,6 @@
 
 @media screen and (max-width: 420px) {
 	#chat-navbar-container {
-		border-top-left-radius: 0;
-		border-top-right-radius: 0;
+        border-radius: 0;
 	}
 }
